feat: Implement Notification Center and refine base typography and badge styles for CityOS Premium theme.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <meta name="description" content="Centro de comando operacional para agência TVG" />
   <meta name="keywords" content="gestão, tarefas, operacional, marketing, TVG" />
 
+  <!-- Typography: CityOS Fonts -->
+  <!-- Satoshi (Fontshare) -->
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap" rel="stylesheet">
+  <!-- IBM Plex Sans (Google Fonts) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-512x512.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-512x512.png" />
