--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
   <title>TVG Flow</title>
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.getRegistrations().then(function (registrations) {
-          for (let registration of registrations) {
-            registration.unregister();
-            console.log('ServiceWorker unregistered to avoid development conflicts');
-          }
-        });
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+          .then(registration => {
+            console.log('SW registered:', registration);
+          })
+          .catch(registrationError => {
+            console.log('SW registration failed:', registrationError);
+          });
       });
     }
   </script>
